# find-anything

./: .gitignore  LICENSE  README  README.md  generate_requirements.sh  pyproject.toml  requirements-cpu.txt  requirements-cuda128.txt  requirements-dev.txt
.github/: code_quality_and_tests.yml
.github/workflows/: code_quality_and_tests.yml  deploy.yml
src/find_anything/: __init__.py  models.py  object_matcher.py  utils.py
src/find_anything/embedding_repository/: __init__.py  base.py  protocol.py
src/find_anything/feature_encoder/: __init__.py  dinov2.py  protocol.py
src/find_anything/mask/: __init__.py  models.py
src/find_anything/mask/generator/: fastsam.py  protocol.py  sam.py
src/find_anything/mask/pooler/: dense_feature.py  protocol.py
src/find_anything/mask/selector/: protocol.py  topk.py
tests/: conftest.py
tests/integration/: conftest.py  test_object_matcher.py
tests/unittests/: test_embedding_repository.py  test_feature_encoder.py  test_mask_generator.py  test_mask_pooler.py  test_mask_selector.py
